micro_ecomm/infra/k8s/microservices/cart-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
  labels:
    app: cart-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
      - name: cart-service
        image: your-dockerhub-username/cart-service:latest
        ports:
        - containerPort: 5002
