micro_ecomm/infra/k8s/microservices/cart-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  type: ClusterIP
  ports:
    - port: 5002
      targetPort: 5002
  selector:
    app: cart-service
